@@ -2601,7 +2601,7 @@
 #define OPT_auto_more				71
 #define OPT_smart_monsters			72
 #define OPT_smart_packs				73
-/* xxx */
+#define OPT_view_player_colour			74
 /* xxx */
 /* xxx */
 /* xxx */
@@ -2710,17 +2710,17 @@
 #define view_bright_lite		op_ptr->opt[OPT_view_bright_lite]
 #define view_granite_lite		op_ptr->opt[OPT_view_granite_lite]
 #define view_special_lite		op_ptr->opt[OPT_view_special_lite]
-#define easy_open				op_ptr->opt[OPT_easy_open]
-#define easy_alter				op_ptr->opt[OPT_easy_alter]
-#define easy_floor				op_ptr->opt[OPT_easy_floor]
-#define show_piles				op_ptr->opt[OPT_show_piles]
-#define center_player			op_ptr->opt[OPT_center_player]
-#define run_avoid_center		op_ptr->opt[OPT_run_avoid_center]
-#define scroll_target			op_ptr->opt[OPT_scroll_target]
-#define auto_more				op_ptr->opt[OPT_auto_more]
-#define smart_monsters			op_ptr->opt[OPT_smart_monsters]
-#define smart_packs				op_ptr->opt[OPT_smart_packs]
-/* xxx */
+#define easy_open                      op_ptr->opt[OPT_easy_open]
+#define easy_alter                     op_ptr->opt[OPT_easy_alter]
+#define easy_floor                     op_ptr->opt[OPT_easy_floor]
+#define show_piles                     op_ptr->opt[OPT_show_piles]
+#define center_player                  op_ptr->opt[OPT_center_player]
+#define run_avoid_center               op_ptr->opt[OPT_run_avoid_center]
+#define scroll_target                  op_ptr->opt[OPT_scroll_target]
+#define auto_more                      op_ptr->opt[OPT_auto_more]
+#define smart_monsters                 op_ptr->opt[OPT_smart_monsters]
+#define smart_packs                    op_ptr->opt[OPT_smart_packs]
+#define view_player_colour             op_ptr->opt[OPT_view_player_colour]
 /* xxx */
 /* xxx */
 /* xxx */
